--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -115,7 +115,7 @@
 		<jsr250.version>1.0</jsr250.version>
 		<kafka.version>0.11.0.1</kafka.version>
 		<kite.version>0.13.0</kite.version>
-		<kotlin.version>1.1.4-3</kotlin.version>
+		<kotlin.version>1.1.50</kotlin.version>
 		<kryo.version>3.0.3</kryo.version>
 		<ldapbp.version>1.0</ldapbp.version>
 		<ldapsdk.version>4.1</ldapsdk.version>
