--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -14,7 +14,7 @@ platform_definition:
         - reactor-core
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 2.0.0.RC1
+      version: 2.0.0.BUILD-SNAPSHOT
       modules:
         - spring-amqp
         - spring-rabbit
@@ -95,6 +95,7 @@ platform_definition:
         - spring-boot-starter-quartz
         - spring-boot-starter-reactor-netty
         - spring-boot-starter-security
+        - spring-boot-starter-security-reactive
         - spring-boot-starter-social-facebook
         - spring-boot-starter-social-linkedin
         - spring-boot-starter-social-twitter
@@ -121,81 +122,81 @@ platform_definition:
         checkout: 2.x
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 2.0.0.RC3
+      version: 2.0.0.RELEASE
       modules:
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 2.0.0.RC3
+      version: 2.0.0.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 3.0.0.RC3
+      version: 3.0.0.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 3.0.0.RC3
+      version: 3.0.0.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 2.0.0.RC3
+      version: 2.0.0.RELEASE
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 2.0.0.RC3
+      version: 2.0.0.RELEASE
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 2.0.0.RC3
+      version: 2.0.0.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 2.0.0.RC3
+      version: 2.0.0.RELEASE
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 2.0.0.RC3
+      version: 2.0.0.RELEASE
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 2.0.0.RC3
+      version: 2.0.0.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-cross-store
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 5.0.0.RC3
+      version: 5.0.0.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 2.0.0.RC3
+      version: 2.0.0.RELEASE
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 3.0.0.RC3
+      version: 3.0.0.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 3.0.0.RC3
+      version: 3.0.0.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 5.0.0.BUILD-SNAPSHOT
+      version: 5.0.0.RELEASE
       modules:
         - spring-aop
         - spring-aspects
@@ -288,7 +289,7 @@ platform_definition:
         - spring-integration-splunk
     - name: Spring Kafka
       groupId: org.springframework.kafka
-      version: 2.0.0.RC1
+      version: 2.0.0.RELEASE
       modules:
         - spring-kafka
         - spring-kafka-test
@@ -339,7 +340,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 5.0.0.M4
+      version: 5.0.0.BUILD-SNAPSHOT
       build:
         compileWith: jdk8
         repository: https://github.com/spring-projects/spring-security
@@ -374,7 +375,7 @@ platform_definition:
         - spring-security-oauth2
     - name: Spring Session
       groupId: org.springframework.session
-      version: 2.0.0.M4
+      version: 2.0.0.BUILD-SNAPSHOT
       modules:
         - spring-session-core
         - spring-session-data-redis
