Align with latest Spring Boot 1.5.8 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -2,7 +2,7 @@ platform_definition:
   projects:
     - name: Aspect J
       groupId: org.aspectj
-      version: 1.8.10
+      version: 1.8.11
       modules:
         - aspectjweaver
         - aspectjtools
@@ -550,21 +550,38 @@ platform_definition:
       - 'com.hazelcast:hazelcast-hibernate5'
       - 'com.jayway.jsonpath:json-path-assert'
       - 'com.microsoft.sqlserver:mssql-jdbc'
-      - 'com.rometools:rome-modules'
       - 'com.rometools:rome-certiorem'
+      - 'com.rometools:rome-modules'
       - 'com.rometools:rome-opml'
       - 'com.rometools:rome-propono'
       - 'com.zaxxer:HikariCP'
       - 'com.zaxxer:HikariCP-java7'
       - 'commons-digester:commons-digester'
+      - 'io.dropwizard.metrics:metrics-annotation'
+      - 'io.dropwizard.metrics:metrics-ehcache'
       - 'io.dropwizard.metrics:metrics-ganglia'
       - 'io.dropwizard.metrics:metrics-graphite'
+      - 'io.dropwizard.metrics:metrics-healthchecks'
+      - 'io.dropwizard.metrics:metrics-httpasyncclient'
+      - 'io.dropwizard.metrics:metrics-jdbi'
+      - 'io.dropwizard.metrics:metrics-jersey'
+      - 'io.dropwizard.metrics:metrics-jersey2'
+      - 'io.dropwizard.metrics:metrics-jetty8'
+      - 'io.dropwizard.metrics:metrics-jetty9'
+      - 'io.dropwizard.metrics:metrics-jetty9-legacy'
+      - 'io.dropwizard.metrics:metrics-json'
+      - 'io.dropwizard.metrics:metrics-jvm'
+      - 'io.dropwizard.metrics:metrics-log4j'
+      - 'io.dropwizard.metrics:metrics-log4j2'
+      - 'io.dropwizard.metrics:metrics-logback'
+      - 'io.dropwizard.metrics:metrics-servlet'
       - 'io.dropwizard.metrics:metrics-servlets'
       - 'io.javaslang:javaslang-match'
       - 'javax.interceptor:javax.interceptor-api'
       - 'javax.servlet:jstl'
       - 'mysql:mysql-connector-java'
       - 'net.java.dev.jna:jna'
+      - 'net.java.dev.jna:jna-platform'
       - 'net.sourceforge.jtds:jtds'
       - 'org.apache.activemq:activemq-amqp'
       - 'org.apache.activemq:activemq-blueprint'
@@ -616,6 +633,19 @@ platform_definition:
       - 'org.apache.logging.log4j:log4j-taglib'
       - 'org.apache.logging.log4j:log4j-web'
       - 'org.apache.poi:poi-scratchpad'
+      - 'org.apache.solr:solr-analysis-extras'
+      - 'org.apache.solr:solr-analytics'
+      - 'org.apache.solr:solr-cell'
+      - 'org.apache.solr:solr-clustering'
+      - 'org.apache.solr:solr-dataimporthandler'
+      - 'org.apache.solr:solr-dataimporthandler-extras'
+      - 'org.apache.solr:solr-langid'
+      - 'org.apache.solr:solr-map-reduce'
+      - 'org.apache.solr:solr-morphlines-cell'
+      - 'org.apache.solr:solr-morphlines-core'
+      - 'org.apache.solr:solr-test-framework'
+      - 'org.apache.solr:solr-uima'
+      - 'org.apache.solr:solr-velocity'
       - 'org.apache.taglibs:taglibs-standard-impl'
       - 'org.apache.taglibs:taglibs-standard-spec'
       - 'org.apache.tomcat:tomcat-annotations-api'
@@ -639,18 +669,37 @@ platform_definition:
       - 'org.codehaus.groovy:groovy-testng'
       - 'org.codehaus.janino:janino'
       - 'org.eclipse.jdt.core.compiler:ecj'
+      - 'org.eclipse.jetty.cdi:cdi-core'
+      - 'org.eclipse.jetty.cdi:cdi-servlet'
+      - 'org.eclipse.jetty.fcgi:fcgi-client'
+      - 'org.eclipse.jetty.fcgi:fcgi-server'
+      - 'org.eclipse.jetty.gcloud:jetty-gcloud-session-manager'
       - 'org.eclipse.jetty.http2:http2-client'
       - 'org.eclipse.jetty.http2:http2-common'
       - 'org.eclipse.jetty.http2:http2-hpack'
+      - 'org.eclipse.jetty.http2:http2-http-client-transport'
       - 'org.eclipse.jetty.http2:http2-server'
+      - 'org.eclipse.jetty.memcached:jetty-memcached-sessions'
       - 'org.eclipse.jetty.orbit:javax.servlet.jsp'
+      - 'org.eclipse.jetty.osgi:jetty-httpservice'
+      - 'org.eclipse.jetty.osgi:jetty-osgi-boot'
+      - 'org.eclipse.jetty.osgi:jetty-osgi-boot-jsp'
+      - 'org.eclipse.jetty.osgi:jetty-osgi-boot-warurl'
       - 'org.eclipse.jetty.websocket:javax-websocket-client-impl'
+      - 'org.eclipse.jetty.websocket:websocket-api'
+      - 'org.eclipse.jetty.websocket:websocket-common'
       - 'org.eclipse.jetty.websocket:websocket-servlet'
       - 'org.eclipse.jetty:apache-jsp'
       - 'org.eclipse.jetty:apache-jstl'
+      - 'org.eclipse.jetty:jetty-alpn-client'
+      - 'org.eclipse.jetty:jetty-alpn-java-client'
+      - 'org.eclipse.jetty:jetty-alpn-java-server'
+      - 'org.eclipse.jetty:jetty-alpn-server'
       - 'org.eclipse.jetty:jetty-annotations'
+      - 'org.eclipse.jetty:jetty-ant'
       - 'org.eclipse.jetty:jetty-continuation'
       - 'org.eclipse.jetty:jetty-deploy'
+      - 'org.eclipse.jetty:jetty-hazelcast'
       - 'org.eclipse.jetty:jetty-http'
       - 'org.eclipse.jetty:jetty-http-spi'
       - 'org.eclipse.jetty:jetty-infinispan'
@@ -669,6 +718,7 @@ platform_definition:
       - 'org.eclipse.jetty:jetty-security'
       - 'org.eclipse.jetty:jetty-spring'
       - 'org.eclipse.jetty:jetty-start'
+      - 'org.eclipse.jetty:jetty-unixsocket'
       - 'org.eclipse.jetty:jetty-util-ajax'
       - 'org.eclipse.jetty:jetty-xml'
       - 'org.ehcache:ehcache-clustered'
@@ -703,7 +753,10 @@ platform_definition:
       - 'org.seleniumhq.selenium:selenium-remote-driver'
       - 'org.seleniumhq.selenium:selenium-safari-driver'
       - 'org.seleniumhq.selenium:selenium-support'
+      - 'org.slf4j:slf4j-ext'
+      - 'org.slf4j:slf4j-jcl'
       - 'org.slf4j:slf4j-jdk14'
+      - 'org.slf4j:slf4j-nop'
       - 'org.slf4j:slf4j-simple'
       - 'org.spockframework:spock-core'
       - 'org.spockframework:spock-spring'
