--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -196,7 +196,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 5.0.0.RELEASE
+      version: 5.0.1.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
