Update Gradle tests to correctly use locally built bom

--- a/platform-tests/src/test/resources/gradle-header.template
+++ b/platform-tests/src/test/resources/gradle-header.template
@@ -11,13 +11,13 @@ apply plugin: 'io.spring.dependency-management'
 
 dependencyManagement {
 	imports {
-		mavenBom "io.spring.platform:platform-bom:${projectVersion}"
+		mavenBom "io.spring.platform:platform-bom:TEST"
 	}
 }
 
 repositories {
 	mavenCentral()
-	flatDir { dirs '../../dependency' }
+	flatDir { dirs '../dependency' }
 	maven { url 'http://repo.spring.io/libs-snapshot' }
 }
 
