--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -459,11 +459,6 @@ platform_definition:
     - name: Spring Web Services
       groupId: org.springframework.ws
       version: 2.4.1.RELEASE
-      build:
-        repository: https://github.com/spring-projects/spring-ws
-        compileWith: jdk8
-        runTestsWith:
-          - jdk8
       modules:
         - spring-ws-core
         - spring-ws-security
@@ -773,6 +768,7 @@ platform_definition:
     'io.netty:netty-all': '4.1.16.Final'
     'javax.jdo:jdo-api': '3.1'
     'net.sourceforge.htmlunit:htmlunit': '2.23'
+    'org.apache.wss4j:wss4j-ws-security-dom': '2.2'
     'org.aspectj:aspectjrt': '1.8.10'
     'org.aspectj:aspectjweaver': '1.8.10'
     'org.beanshell:bsh': '2.0b5'
