--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -25,7 +25,7 @@ platform_definition:
           - jdk8
     - name: Spring Batch
       groupId: org.springframework.batch
-      version: 4.0.0.M3
+      version: 4.0.0.M5
       modules:
         - spring-batch-core
         - spring-batch-infrastructure
@@ -109,9 +109,9 @@ platform_definition:
         - spring-boot-starter-web-services
     - name: Spring Cloud Connectors
       groupId: org.springframework.cloud
-      version: 2.0.0.M1
+      version: 2.0.0.BUILD-SNAPSHOT
       modules:
-        - spring-cloud-core
+        - spring-cloud-connectors-core
         - spring-cloud-cloudfoundry-connector
         - spring-cloud-heroku-connector
         - spring-cloud-localconfig-connector
@@ -121,81 +121,81 @@ platform_definition:
         checkout: 2.x
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 2.0.0.RELEASE
+      version: 2.0.1.RELEASE
       modules:
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 2.0.0.RELEASE
+      version: 2.0.1.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 3.0.0.RELEASE
+      version: 3.0.1.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 3.0.0.RELEASE
+      version: 3.0.1.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 2.0.0.RELEASE
+      version: 2.0.1.RELEASE
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 2.0.0.RELEASE
+      version: 2.0.1.RELEASE
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 2.0.0.RELEASE
+      version: 2.0.1.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 2.0.0.RELEASE
+      version: 2.0.1.RELEASE
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 2.0.0.RELEASE
+      version: 2.0.1.RELEASE
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 2.0.0.RELEASE
+      version: 2.0.1.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-cross-store
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 5.0.0.RELEASE
+      version: 5.0.1.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 2.0.0.RELEASE
+      version: 2.0.1.RELEASE
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 3.0.0.RELEASE
+      version: 3.0.1.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 3.0.0.RELEASE
+      version: 3.0.1.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 5.0.1.BUILD-SNAPSHOT
+      version: 5.0.1.RELEASE
       modules:
         - spring-aop
         - spring-aspects
@@ -758,6 +758,7 @@ platform_definition:
       - 'org.javassist:javassist'
       - 'org.jboss.logging:jboss-logging'
       - 'org.jetbrains.kotlin:kotlin-runtime'
+      - 'org.jetbrains.kotlin:kotlin-stdlib-jre7'
       - 'org.jetbrains.kotlin:kotlin-stdlib-jre8'
       - 'org.jooq:jooq-codegen'
       - 'org.jooq:jooq-meta'
@@ -796,6 +797,7 @@ platform_definition:
     'io.projectreactor:reactor-core': '3.1.2.BUILD-SNAPSHOT'
     'org.aspectj:aspectjweaver': '1.9.0.BETA-7'
     'org.eclipse.persistence:org.eclipse.persistence.jpa': '2.7.0-RC3'
+    'org.hibernate:hibernate-validator': '6.0.3.Final'
     'org.testng:testng': '6.12'
     'javax.servlet:javax.servlet-api': '4.0.0'
   repositories:
