Align with latest Spring Boot 1.5.9 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -215,7 +215,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.3.12.RELEASE
+      version: 4.3.13.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
