--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -65,7 +65,9 @@
 		<cas-client.version>3.4.1</cas-client.version>
 		<castor.version>1.4.1</castor.version>
 		<commonj.version>1.1.1</commonj.version>
+		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 		<commons-cli.version>1.4</commons-cli.version>
+		<commons-collections.version>3.2.2</commons-collections.version>
 		<commons-fileupload.version>1.3.3</commons-fileupload.version>
 		<commons-io.version>2.6</commons-io.version>
 		<commons-httpclient.version>3.1</commons-httpclient.version>
@@ -411,9 +413,19 @@
 				<version>${xstream.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>commons-beanutils</groupId>
+				<artifactId>commons-beanutils</artifactId>
+				<version>${commons-beanutils.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>commons-cli</groupId>
 				<artifactId>commons-cli</artifactId>
 				<version>${commons-cli.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-collections</groupId>
+				<artifactId>commons-collections</artifactId>
+				<version>${commons-collections.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-fileupload</groupId>
