--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -121,81 +121,81 @@ platform_definition:
         checkout: 2.x
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 2.0.1.RELEASE
+      version: 2.0.2.RELEASE
       modules:
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 2.0.1.RELEASE
+      version: 2.0.2.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 3.0.1.RELEASE
+      version: 3.0.2.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 3.0.1.RELEASE
+      version: 3.0.2.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 2.0.1.RELEASE
+      version: 2.0.2.RELEASE
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 2.0.1.RELEASE
+      version: 2.0.2.RELEASE
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 2.0.1.RELEASE
+      version: 2.0.2.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 2.0.1.RELEASE
+      version: 2.0.2.RELEASE
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 2.0.1.RELEASE
+      version: 2.0.2.RELEASE
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 2.0.1.RELEASE
+      version: 2.0.2.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-cross-store
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 5.0.1.RELEASE
+      version: 5.0.2.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 2.0.1.RELEASE
+      version: 2.0.2.RELEASE
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 3.0.1.RELEASE
+      version: 3.0.2.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 3.0.1.RELEASE
+      version: 3.0.2.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 5.0.2.BUILD-SNAPSHOT
+      version: 5.0.2.RELEASE
       modules:
         - spring-aop
         - spring-aspects
@@ -335,7 +335,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 5.0.0.BUILD-SNAPSHOT
+      version: 5.0.0.RELEASE
       build:
         compileWith: jdk8
         repository: https://github.com/spring-projects/spring-security
@@ -370,7 +370,7 @@ platform_definition:
         - spring-security-oauth2
     - name: Spring Session
       groupId: org.springframework.session
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.RC2
       modules:
         - spring-session-core
         - spring-session-data-redis
@@ -382,7 +382,7 @@ platform_definition:
         tagPrefix:
     - name: Spring Session Data MongoDB
       groupId: org.springframework.session
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.RC2
       modules:
         - spring-session-data-mongodb
     - name: Spring Social
