--- a/platform-tests/src/test/resources/gradle-header.template
+++ b/platform-tests/src/test/resources/gradle-header.template
@@ -1,6 +1,6 @@
 buildscript {
 	repositories {
-		jcenter()
+		mavenCentral()
 	}
 	dependencies {
 		classpath 'io.spring.gradle:dependency-management-plugin:0.6.0.RELEASE'
