--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -50,7 +50,7 @@
 		<spring-integration-splunk.version>1.1.0.RELEASE</spring-integration-splunk.version>
 		<spring-security-jwt.version>1.0.8.RELEASE</spring-security-jwt.version>
 		<spring-security-oauth.version>2.2.1.RELEASE</spring-security-oauth.version>
-		<spring-social.version>1.1.4.RELEASE</spring-social.version>
+		<spring-social.version>1.1.5.BUILD-SNAPSHOT</spring-social.version>
 		<spring-social-twitter.version>1.1.2.RELEASE</spring-social-twitter.version>
 		<spring-web-flow.version>2.5.0.BUILD-SNAPSHOT</spring-web-flow.version>
 		<spring-web-services.version>${spring-ws.version}</spring-web-services.version>
