--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -25,7 +25,7 @@ platform_definition:
           - jdk8
     - name: Spring Batch
       groupId: org.springframework.batch
-      version: 4.0.0.M5
+      version: 4.0.0.RELEASE
       modules:
         - spring-batch-core
         - spring-batch-infrastructure
@@ -771,6 +771,7 @@ platform_definition:
       - 'org.slf4j:slf4j-ext'
       - 'org.slf4j:slf4j-jcl'
       - 'org.slf4j:slf4j-jdk14'
+      - 'org.slf4j:slf4j-log4j12'
       - 'org.slf4j:slf4j-nop'
       - 'org.slf4j:slf4j-simple'
       - 'org.spockframework:spock-core'
