Remove javax.money:money-api
This commit also upgrades to Spring Kafka 2.1.0.RELEASE to pass tests.

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -285,7 +285,7 @@ platform_definition:
         - spring-integration-splunk
     - name: Spring Kafka
       groupId: org.springframework.kafka
-      version: 2.1.0.RC1
+      version: 2.1.0.RELEASE
       modules:
         - spring-kafka
         - spring-kafka-test
