Align with latest Spring Boot 2.0 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -665,6 +665,7 @@ platform_definition:
       - 'org.codehaus.janino:janino'
       - 'org.eclipse.jdt.core.compiler:ecj'
       - 'org.eclipse.jetty.cdi:cdi-core'
+      - 'org.eclipse.jetty.cdi:cdi-full-servlet'
       - 'org.eclipse.jetty.cdi:cdi-servlet'
       - 'org.eclipse.jetty.fcgi:fcgi-client'
       - 'org.eclipse.jetty.fcgi:fcgi-server'
@@ -673,7 +674,6 @@ platform_definition:
       - 'org.eclipse.jetty.http2:http2-common'
       - 'org.eclipse.jetty.http2:http2-hpack'
       - 'org.eclipse.jetty.http2:http2-http-client-transport'
-      - 'org.eclipse.jetty.http2:http2-server'
       - 'org.eclipse.jetty.memcached:jetty-memcached-sessions'
       - 'org.eclipse.jetty.orbit:javax.servlet.jsp'
       - 'org.eclipse.jetty.osgi:jetty-httpservice'
@@ -687,14 +687,19 @@ platform_definition:
       - 'org.eclipse.jetty:apache-jsp'
       - 'org.eclipse.jetty:apache-jstl'
       - 'org.eclipse.jetty:jetty-alpn-client'
+      - 'org.eclipse.jetty:jetty-alpn-conscrypt-client'
       - 'org.eclipse.jetty:jetty-alpn-java-client'
       - 'org.eclipse.jetty:jetty-alpn-java-server'
+      - 'org.eclipse.jetty:jetty-alpn-openjdk8-client'
+      - 'org.eclipse.jetty:jetty-alpn-openjdk8-server'
       - 'org.eclipse.jetty:jetty-alpn-server'
       - 'org.eclipse.jetty:jetty-annotations'
       - 'org.eclipse.jetty:jetty-ant'
       - 'org.eclipse.jetty:jetty-continuation'
       - 'org.eclipse.jetty:jetty-deploy'
+      - 'org.eclipse.jetty:jetty-distribution'
       - 'org.eclipse.jetty:jetty-hazelcast'
+      - 'org.eclipse.jetty:jetty-home'
       - 'org.eclipse.jetty:jetty-http'
       - 'org.eclipse.jetty:jetty-http-spi'
       - 'org.eclipse.jetty:jetty-infinispan'
