--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -214,7 +214,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.3.13.RELEASE
+      version: 4.3.14.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
