--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -46,7 +46,7 @@
 
 	<properties>
 		<spring-integration-flow.version>2.0.0.BUILD-SNAPSHOT</spring-integration-flow.version>
-		<spring-integration-kafka.version>3.0.0.BUILD-SNAPSHOT</spring-integration-kafka.version>
+		<spring-integration-kafka.version>3.0.0.RELEASE</spring-integration-kafka.version>
 		<spring-integration-splunk.version>1.1.0.RELEASE</spring-integration-splunk.version>
 		<spring-security-jwt.version>1.0.9.RELEASE</spring-security-jwt.version>
 		<spring-security-oauth.version>2.2.1.RELEASE</spring-security-oauth.version>
