--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -271,7 +271,7 @@ platform_definition:
         - spring-integration-flow
     - name: Spring Integration Kafka
       groupId: org.springframework.integration
-      version: 3.0.0.BUILD-SNAPSHOT
+      version: 3.0.0.RELEASE
       modules:
         - spring-integration-kafka
     - name: Spring Integration Splunk
