--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -120,6 +120,7 @@
 		<kryo.version>3.0.3</kryo.version>
 		<ldapbp.version>1.0</ldapbp.version>
 		<ldapsdk.version>4.1</ldapsdk.version>
+		<log4j.version>1.2.17</log4j.version>
 		<myfaces.version>2.2.12</myfaces.version>
 		<nimbus-jose-jwt.version>5.1</nimbus-jose-jwt.version>
 		<oauth2-oidc-sdk.version>5.38</oauth2-oidc-sdk.version>
@@ -608,6 +609,11 @@
 				<groupId>ldapsdk</groupId>
 				<artifactId>ldapsdk</artifactId>
 				<version>${ldapsdk.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>log4j</groupId>
+				<artifactId>log4j</artifactId>
+				<version>${log4j.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>net.sf.jopt-simple</groupId>
