--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -146,6 +146,11 @@ platform_definition:
       version: 2.0.2.RELEASE
       modules:
         - spring-data-gemfire
+    - name: Spring Data Geode
+      groupId: org.springframework.data
+      version: 2.0.2.RELEASE
+      modules:
+        - spring-data-geode
     - name: Spring Data JPA
       groupId: org.springframework.data
       version: 2.0.2.RELEASE
@@ -435,6 +440,8 @@ platform_definition:
       'org.springframework.data:spring-data-gemfire':
          - 'org.springframework.shell:spring-shell'
          - 'org.iq80.snappy:snappy'
+      'org.springframework.data:spring-data-geode':
+         - 'org.iq80.snappy:snappy'
       'org.springframework.data:spring-data-rest-webmvc':
          - 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate4'
       'org.springframework.social:spring-social-web':
@@ -604,6 +611,14 @@ platform_definition:
       - 'org.apache.activemq:artemis-selector'
       - 'org.apache.activemq:artemis-server'
       - 'org.apache.activemq:artemis-service-extensions'
+      - 'org.apache.geode:geode-common'
+      - 'org.apache.geode:geode-json'
+      - 'org.apache.geode:geode-junit'
+      - 'org.apache.geode:geode-old-client-support'
+      - 'org.apache.geode:geode-pulse'
+      - 'org.apache.geode:geode-rebalancer'
+      - 'org.apache.geode:geode-web'
+      - 'org.apache.geode:geode-web-api'
       - 'org.apache.httpcomponents:httpcore'
       - 'org.apache.httpcomponents:httpcore-nio'
       - 'org.apache.johnzon:johnzon-jsonb'
